--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
-mysqlclient==2.2.7
+pymysql==1.1.0
 packaging==25.0
 PyJWT==2.10.1
 python-dotenv==1.1.0
